More responsive footer and navbar

--- a/blog.html
+++ b/blog.html
@@ -288,7 +288,7 @@
 
     <div class="footer">
 			<div class="container">
-        <span>Copyright 2020. Made with love (and
+        <span id="footer-text">Copyright 2020. Made with love (and
           <a href="https://getbootstrap.com/docs/4.4/getting-started/introduction/" style="color: #cccccc;"><i class="fab fa-bootstrap" target="_blank"></i></a>) by Niharika Jain. All rights reserved.</span>
 			</div>
 		</div>
