--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Script">
-    <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Staatliches&display=swap">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	  <script src="https://kit.fontawesome.com/b3443c5838.js" crossorigin="anonymous"></script>
 	</head>
@@ -73,7 +74,7 @@
 
 		<div class="footer">
 			<div class="container">
-	  		<span>Copyright 2020. Made with love (and <a href="https://getbootstrap.com/docs/4.4/getting-started/introduction/" style="color: #cccccc;" target="_blank"><i class="fab fa-bootstrap"></i></a>) by Niharika Jain. All rights reserved.</span>
+	  		<span id="footer-text">Copyright 2020. Made with love (and <a href="https://getbootstrap.com/docs/4.4/getting-started/introduction/" style="color: #cccccc;" target="_blank"><i class="fab fa-bootstrap"></i></a>) by Niharika Jain. All rights reserved.</span>
 			</div>
 		</div>
 
