--- a/resume.html
+++ b/resume.html
@@ -265,7 +265,7 @@
 
     <div class="footer">
 			<div class="container">
-        <span>Copyright 2020. Made with love (and <a href="https://getbootstrap.com/docs/4.4/getting-started/introduction/" style="color: #cccccc;" target="_blank"><i class="fab fa-bootstrap"></i></a>) by Niharika Jain. All rights reserved.</span>
+        <span id="footer-text">Copyright 2020. Made with love (and <a href="https://getbootstrap.com/docs/4.4/getting-started/introduction/" style="color: #cccccc;" target="_blank"><i class="fab fa-bootstrap"></i></a>) by Niharika Jain. All rights reserved.</span>
 			</div>
 		</div>
 
