Edited blog article

--- a/blog.html
+++ b/blog.html
@@ -150,13 +150,17 @@
               to whom you caused pain thoughtful reflection, a remorseful apology, and a willingness to be more cognizant of your behavior in the future.</p>
 
             <p>Another layer of complexity comes from the reality that sexual assault never happens in quite the way you want to picture it: in a secluded,
-              darkened alley, behind a dumpster, by a stranger, forced entirely onto a resisting victim, where the event is reported to the police and all allegations are made
-              instantly. No, in reality, <a href="https://www.rainn.org/statistics/scope-problem" target="_blank"> most rapes occur indoors</a>. It’s usually at
-              or near the victim’s house, and by someone the victim knows. There is no one response to rape. Victims may stay in touch with their perpetrators.
-              Their trauma may not let them speak about the issue after the event, sometimes for decades. And yet, our society questions the credibility, validity,
-              and motivation of sexual assault allegations that don’t match the perfect fantasy scenario outlined above &ndash; in other words, whatever isn't "real" rape.
-              Of course, victims whose stories do closely fit the <a href="https://www.thelily.com/i-was-raped-in-an-alley-and-everyone-believed-me-heres-why-thats-a-problem" target="_blank">
-              stranger-in-a-back-alley narrative are unanimously believed</a>. But those whose don’t fit it must brave the incessant line of questioning from the
+              darkened alley, behind a dumpster, by a stranger, forced with his entire body onto a resisting victim, where the event is reported to the police
+              and all allegations are made instantly. No, in reality, <a href="https://www.rainn.org/statistics/scope-problem" target="_blank"> most rapes occur
+              indoors</a>. It’s usually at or near the victim’s house, and by someone the victim knows. There is no one act that is worthy of the word "rape," and
+              there is no one response to rape. Victims may stay in touch with their perpetrators to create any semblance of normal they can still control after
+              losing their autonomy for one night. Their trauma may not let them speak about the issue after the event, sometimes for decades. And yet, our
+              society questions the credibility, validity, and motivation of sexual assault allegations that don’t match the perfect fantasy scenario outlined above &ndash;
+              in other words, whatever isn't "real" rape. Of course, victims whose stories do closely fit the <a href="https://www.thelily.com/i-was-raped-in-an-alley-and-everyone-believed-me-heres-why-thats-a-problem" target="_blank">
+              stranger-in-a-back-alley narrative are unanimously believed</a>. Even if their stories don't quite fit the fantasy, even if
+              <a href="https://www.independent.co.uk/news/world/americas/stanford-university-rape-case-the-victims-letter-in-full-a7067146.html" target="_blank">
+              the act used just one hand, that stranger-in-a-back alley narrative so powerfully wins over the minds of the same audience who would be quick to dismiss the story of the same act which
+              happened in a bedroom by someone the victim knew. The victims whose stories don't fit the monster stereotype must brave the incessant line of questioning from the
               entire country, if they ever muster up the astronomical amount of courage needed to tell their story in the first place.</p>
 
             <p>Combine that with the idea that the court of public opinion should reflect the presumption of innocence upheld in criminal trial, and it's a miracle some women are
