--- a/blog.html
+++ b/blog.html
@@ -159,7 +159,7 @@
               in other words, whatever isn't "real" rape. Of course, victims whose stories do closely fit the <a href="https://www.thelily.com/i-was-raped-in-an-alley-and-everyone-believed-me-heres-why-thats-a-problem" target="_blank">
               stranger-in-a-back-alley narrative are unanimously believed</a>. Even if their stories don't quite fit the fantasy, even if
               <a href="https://www.independent.co.uk/news/world/americas/stanford-university-rape-case-the-victims-letter-in-full-a7067146.html" target="_blank">
-              the act used just one hand, that stranger-in-a-back alley narrative so powerfully wins over the minds of the same audience who would be quick to dismiss the story of the same act which
+              the act used just one hand</a>, that stranger-in-a-back alley narrative so powerfully wins over the minds of the same audience who would be quick to dismiss the story of the same act which
               happened in a bedroom by someone the victim knew. The victims whose stories don't fit the monster stereotype must brave the incessant line of questioning from the
               entire country, if they ever muster up the astronomical amount of courage needed to tell their story in the first place.</p>
 
