--- a/blog.html
+++ b/blog.html
@@ -177,8 +177,13 @@
 
             <p>Sexual assault is nuanced and monsters don’t exist in the way we fear them. Sexual assaulters and rapists exist as normal, functional members of society.
               The faster we realize this, the easier it will be to collectively discard the notions we have that birth and incubate rape culture. Victims will be less mortified
-              to share their stories. People who unknowingly cross the boundaries of consent can reflect and choose to learn from their mistakes.
-              And eventually, we won’t have to wait so long for the unapologetic Harvey Weinsteins to enter our prisons in the first place.</p>
+              to share their stories. People who unknowingly cross the boundaries of consent can reflect and choose to learn from their mistakes. The monsters are the everyday
+              people who don't face up to their actions. Those who never show disgust at realizing what they have done, those unremorseful ones who treat more than one victim
+              this way. The sentencing is a victory for all victims everywhere who can see themselves in Miriam Haley, a woman who still kept in contact with her
+              abuser after the event to fabricate normal. It's a victory for those who relate to Jessica Mann, a woman who had an intimate relationship with her abuser.
+              These victims are not to be punished with the world's disbelief for the lack of monster stereotypes present in their stories. Eventually, we will collectively
+              choose to broaden our narrow imaginations and change our expectations of what counts as rape and what does not. That means eventually, we won’t have to wait
+              so long for the unapologetic Harvey Weinsteins of the world to enter our prisons in the first place.</p>
 
           </br>
           <h4>Footnotes</h4>
