--- a/blog.html
+++ b/blog.html
@@ -162,7 +162,8 @@
 
             <p>But as a reminder, this is an article detailing why rape culture is so complicated. Regardless of whether they are believed to be victims or not, victims, even those who perfectly fit that
               stranger-and-alley archetype, are invalidated by an incessant line of questioning and dismissive comments. What did she expect wearing that skirt? Didn't they invite it with that amount of alcohol?
-              <a href="https://www.independent.co.uk/news/world/americas/stanford-university-rape-case-the-victims-letter-in-full-a7067146.html" target="_blank"> It was just a hand inserted; that's not really rape.</a> That's unfortunate, but it was just one mistake, allegation is a weapon to topple his career. Regarding the alcohol Chanel Miller makes a crucial point. She is the
+              <a href="https://www.independent.co.uk/news/world/americas/stanford-university-rape-case-the-victims-letter-in-full-a7067146.html" target="_blank"> It was just a hand inserted; that's not really rape.</a> That's unfortunate,
+              but it was just one mistake, whereas this allegation is a weapon to topple his career. Regarding the alcohol Chanel Miller makes a crucial point. She is the
                 victim famed for having spoken out both during and after her trial when her rapist, Brock Turner, received a lenient sentence because he showed potential as a Stanford swimmer.
                 <div style="padding-top: 2vw; padding-left: 10vw; padding-right: 10vw; padding-bottom: 2vw;">
                   <p style="font-size: 14pt; font-family: Book Antiqua, serif; font-weight:bold;">
