--- a/blog.html
+++ b/blog.html
@@ -208,7 +208,7 @@
               perpetrator and victim are equals in all respects besides gender.</li>
             <li>It must be stressed, again, that this article is discussing situations where the only real power dynamic that appears is gender-based. This statement
               should not be taken to overlook and dismiss white women accusing black men of misconduct, an issue racially tinged with the systemic oppression of
-              Black people throughout this country’s history.</li>
+              black people throughout this country’s history.</li>
           </ol>
       </div>
     </div>
