--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 		        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="blog.html">Blog</a>
+		        <a class="nav-link" href="blog">Blog</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="resume.html">Résumé</a>
+		        <a class="nav-link" href="resume">Résumé</a>
 		      </li>
 					<li class="nav-item">
-		        <a class="nav-link" href="gallery.html">Gallery</a>
+		        <a class="nav-link" href="gallery">Gallery</a>
 		      </li>
 		    </ul>
 		  </div>
