--- a/gallery.html
+++ b/gallery.html
@@ -23,13 +23,13 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="index.html">About</a>
+		        <a class="nav-link" href="index">About</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="blog.html">Blog</a>
+		        <a class="nav-link" href="blog">Blog</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="resume.html">Résumé</a>
+		        <a class="nav-link" href="resume">Résumé</a>
 		      </li>
 					<li class="nav-item active">
 		        <a class="nav-link" href="#">Gallery <span class="sr-only">(current)</span></a>
