--- a/resume.html
+++ b/resume.html
@@ -21,16 +21,16 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="index.html">About</a>
+		        <a class="nav-link" href="index">About</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="blog.html">Blog</a>
+		        <a class="nav-link" href="blog">Blog</a>
 		      </li>
 		      <li class="nav-item active">
 		        <a class="nav-link" href="#">Résumé<span class="sr-only">(current)</span></a>
 		      </li>
 					<li class="nav-item">
-		        <a class="nav-link" href="gallery.html">Gallery</a>
+		        <a class="nav-link" href="gallery">Gallery</a>
 		      </li>
 		      <!-- <li class="nav-item">
 		        <a class="nav-link disabled" href="#">Disabled</a>
