--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Staatliches&display=swap">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	  <script src="https://kit.fontawesome.com/b3443c5838.js" crossorigin="anonymous"></script>
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101241854);</script>
+    <script async src="//static.getclicky.com/js"></script>
 	</head>
 	<body style="background-color: #FAFAF9;">
 
