--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter&display=swap">
     <script src="https://kit.fontawesome.com/b3443c5838.js" crossorigin="anonymous"></script>
-	    <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101241854);</script>
+    <script async src="//static.getclicky.com/js"></script>
 	</head>
 	<body style="background-color: #FAFAF9;">
 
