Default Hello is sans-serif, edited picture caption

--- a/gallery.html
+++ b/gallery.html
@@ -206,7 +206,7 @@
         <div class="col-lg-4">
           <div class="img-container">
             <img src="images/gallery/23.jpg" class="mx-auto d-block img-thumbnail" alt="Richmond District, San Francisco">
-            <div class="text"><h4>Richmond District, San Francisco</h4> <h5>July 2018</h5></div>
+            <div class="text"><h4>The Castro, San Francisco</h4> <h5>July 2018</h5></div>
           </div>
         </div>
         <div class="col-lg-4">
