Changes to titles

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>Blog</title>
+    <title>Blog | Niharika Jain</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter&display=swap">
@@ -188,7 +188,7 @@
 
             <p>The underlying theme in the ideas presented here is that rapists are not sick monsters. They work at their daily jobs and crack jokes. They enjoy meaningful relationships with
               friends and significant others. They aren’t devoid of all emotion and they don't even have to be cruel and violent for the sake of being cruel and violent; in their heads, their
-              crime coule be disguising itself as a beautiful, adventurous act of intimacy. And the sexual violence they commit are not monstrous acts that only happen in filthy locales to
+              crime could be disguising itself as a beautiful, adventurous act of intimacy. And the sexual violence they commit are not monstrous acts that only happen in filthy locales to
               kicking-and-screaming strangers.</p>
 
             <p>Sexual assault is nuanced and monsters don’t exist in the way we fear them. Sexual assaulters and rapists exist as normal, functional members of society.
