--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>Gallery</title>
+    <title>Gallery | Niharika Jain</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Script">
@@ -178,8 +178,8 @@
       <div class="row justify-content-around mb-lg-4">
         <div class="col-lg-4">
           <div class="img-container">
-            <img src="images/gallery/19.jpg" class="mx-auto d-block img-thumbnail" alt="Pike Place Public Market, Seattle">
-            <div class="text"><h4>Pike Place Public Market, Seattle</h4> <h5>March 2019</h5></div>
+            <img src="images/gallery/19.jpg" class="mx-auto d-block img-thumbnail" alt="Pike Place Market, Seattle">
+            <div class="text"><h4>Pike Place Market, Seattle</h4> <h5>March 2019</h5></div>
           </div>
         </div>
         <div class="col-lg-4">
