Add hyperlink to nav brand

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 
 		<nav class="navbar sticky-top navbar-light navbar-expand-lg bg-white border-bottom">
 			<!-- navbar-expand-lg  -->
-		  <a class="navbar-brand" href="#">NIHARIKA JAIN.</a>
+		  <a class="navbar-brand" href="index">NIHARIKA JAIN.</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -148,7 +148,7 @@
         </div>
         <div class="col-lg-4">
           <div class="img-container">
-            <img src="images/gallery/15.jpg" class="mx-auto d-block img-thumbnail" alt="Pier 1, San Francisco">
+            <img src="images/gallery/15.jpg" class="mx-auto d-block img-thumbnail" alt="Pier 7, San Francisco">
             <div class="text"><h4>Pier 1, San Francisco</h4> <h5>August 2019</h5></div>
           </div>
         </div>
