--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 
 
 		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white border-bottom">
-		  <a class="navbar-brand" href="#">NIHARIKA JAIN.</a>
+		  <a class="navbar-brand" href="index">NIHARIKA JAIN.</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
