--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="col-lg-4 align-self-lg-start">
 							<p id="hello" style="padding-right:7vw;"> HELLO, </p>
 							<br/><p id="world"> world. </p>
-				</br><p>I'm <strong>Niharika Jain</strong>, a final-semester Master's student in
+				</br><p>I'm <strong>Niharika Jain</strong>, a recent Master's graduate in
 					computer science at Arizona State University, researching gender and racial bias
 					 in machine learning.</p>
 					 <p> I am a second-generation American, an immigrant, and a woman
