--- a/resume.html
+++ b/resume.html
@@ -183,7 +183,7 @@
         </div>
         <div class="col-md-10">
           <h4>Arizona State University</h4>
-          <p><strong>Master of Science in Computer Science &nbsp;&bull;&nbsp; 4.0 GPA &nbsp;&bull;&nbsp; August 2019 &ndash; May 2020 (Expected)</strong></p>
+          <p><strong>Master of Science in Computer Science &nbsp;&bull;&nbsp; 4.0 GPA &nbsp;&bull;&nbsp; August 2019 &ndash; May 2020</strong></p>
           <p><strong>Bachelor of Science in Computer Science &nbsp;&bull;&nbsp; 4.0 GPA &nbsp;&bull;&nbsp; August 2015 &ndash; May 2019 </strong></br>
           <em>Outstanding Graduate for Computer Science, Spring 2019</em></br>New American University Scholar:
           National Merit Finalist</p>
